docs/neoforged/versioned_docs/version-1.20.6/datagen/glm.md
# Global Loot Modifier Generation

[Global Loot Modifiers (GLMs)][glm] can be generated for a mod by subclassing `GlobalLootModifierProvider` and implementing `#start`. Each GLM can be added generated by calling `#add` and specifying the name of the modifier, the [modifier instance][instance] to be serialized, and an optional list of [conditions] which determine whether the GLM should be loaded. After implementation, the provider must be [added][datagen] to the `DataGenerator`.

```java
@SubscribeEvent // on the mod event bus
public static void gatherData(GatherDataEvent event) {
    event.getGenerator().addProvider(
        // Tell generator to run only when server data are generating
        event.includeServer(),
        output -> new MyGlobalLootModifierProvider(output, event.getLookupProvider(), MOD_ID)
    );
}

// In some GlobalLootModifierProvider#start
this.add("example_modifier",
    new ExampleModifier(
        new LootItemCondition[] {
            WeatherCheck.weather().setRaining(true).build() // Executes when raining
        },
        "val1",
        10,
        Items.DIRT
    ),
    // If this item exists and is registered, then this GLM will be loaded
    new ItemExistsCondition("other_mod", "other_mod_item")
);
```

[glm]: ../resources/server/glm.md
[conditions]: ../resources/server/conditional.md
[instance]: ../resources/server/glm.md#igloballootmodifier
[datagen]: ../resources/index.md#data-generation
